@@ -19,6 +19,7 @@
 * Barclaycard Smartpay: Add support for 3DS2 [britth] #3251
 * Adyen: Add support for non-fractional currencies [molbrown] #3257
 * Decidir: Add new gateway [jknipp] #3254
+* Checkout V2: Reapply Update stored card flag [curiousepic]
 
 == Version 1.95.0 (May 23, 2019)
 * Adyen: Constantize version to fix subdomains [curiousepic] #3228
